WIP: Handle all stops as monomodal, then update parent/child-relations.