@@ -16,14 +16,11 @@
 package org.rutebanken.tiamat.importer.initial;
 
 import org.rutebanken.tiamat.importer.StopPlaceTopographicPlaceReferenceUpdater;
-import org.rutebanken.tiamat.importer.finder.SomethingWrapper;
-import org.rutebanken.tiamat.importer.finder.StopPlaceBySomethingFinder;
-import org.rutebanken.tiamat.importer.handler.StopPlaceGrouper;
 import org.rutebanken.tiamat.importer.handler.StopPlaceType;
 import org.rutebanken.tiamat.model.SiteRefStructure;
 import org.rutebanken.tiamat.model.StopPlace;
 import org.rutebanken.tiamat.netex.mapping.NetexMapper;
-import org.rutebanken.tiamat.versioning.VersionCreator;
+import org.rutebanken.tiamat.repository.StopPlaceRepository;
 import org.rutebanken.tiamat.versioning.save.StopPlaceVersionedSaverService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -32,12 +29,10 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
 
-import static java.util.stream.Collectors.groupingBy;
+import static java.util.stream.Collectors.toList;
 
 @Component
 @Transactional
@@ -54,89 +49,60 @@ public class ParallelInitialStopPlaceImporter {
     @Autowired
     private NetexMapper netexMapper;
 
-    @Autowired
-    private StopPlaceBySomethingFinder finder;
-
     @Value("${changelog.publish.enabled:false}")
     private boolean publishChangelog;
 
     @Autowired
-    private VersionCreator versionCreator;
+    private StopPlaceRepository stopPlaceRepository; // (fixme) access this through cache??
 
     public List<org.rutebanken.netex.model.StopPlace> importStopPlaces(List<StopPlace> tiamatStops, AtomicInteger stopPlacesCreated) {
+        Map<String, Set<String>> parentsByChild = new HashMap<>();
+        Map<String, String> originalIdByNetexId = new HashMap<>();
+
         if (publishChangelog) {
             throw new IllegalStateException("Initial import not allowed with changelog publishing enabled! Set changelog.publish.enabled=false");
         }
 
-        StopPlaceGrouper groupByStopPlaceHierarchy = groupByHierarchy(tiamatStops);
-
-        List<org.rutebanken.netex.model.StopPlace> parents = groupByStopPlaceHierarchy.parents().parallelStream()
-                .peek(stopPlaceTopographicPlaceReferenceUpdater::updateTopographicReference)
+        List<org.rutebanken.netex.model.StopPlace> stops = tiamatStops.parallelStream()
                 .map(stopPlace -> {
-                    String externalId = stopPlace.getNetexId();
-                    stopPlace.setParentStopPlace(true);
-                    StopPlace saved = stopPlaceVersionedSaverService.saveNewVersion(stopPlace);
-                    stopPlacesCreated.incrementAndGet();
 
-                    String importedId = saved.getKeyValues().get("imported-id").getItems().stream().findFirst().orElse(null);
-
-                    if (externalId == null) {
-                        stopPlace.getOriginalIds().forEach(originalId -> finder.updateCache(originalId, new SomethingWrapper(saved.getNetexId(), originalId)));
-                    } else {
-                        finder.updateCache(stopPlace.getNetexId(), new SomethingWrapper(saved.getNetexId(), importedId));
+                    if (stopPlace.getTariffZones() != null) {
+                        stopPlace.getTariffZones().forEach(tariffZoneRef -> tariffZoneRef.setVersion(null));
                     }
 
-                    return netexMapper.mapToNetexModel(saved);
+                    return stopPlace;
                 })
-                .toList();
-
-        List<org.rutebanken.netex.model.StopPlace> stops = new ArrayList<>(parents);
-
-        List<org.rutebanken.netex.model.StopPlace> children = groupByStopPlaceHierarchy.children().parallelStream()
-                .peek(stopPlaceTopographicPlaceReferenceUpdater::updateTopographicReference)
+                .peek(stopPlace -> stopPlaceTopographicPlaceReferenceUpdater.updateTopographicReference(stopPlace))
                 .map(stopPlace -> {
-                    StopPlace parentStopPlace = null;
-                    if (stopPlace.getParentSiteRef() != null && stopPlace.getParentSiteRef().getRef() != null) {
-                        String importedParentId = stopPlace.getParentSiteRef().getRef();
-                        parentStopPlace = finder.findByExternalId(importedParentId);
-                        String resolvedParentNetexId = parentStopPlace.getNetexId();
-
-                        if (resolvedParentNetexId != null) {
-                            SiteRefStructure parentSiteRef = new SiteRefStructure();
-                            parentSiteRef.setRef(resolvedParentNetexId);
-                            parentSiteRef.setVersion(stopPlace.getParentSiteRef().getVersion());
-                            stopPlace.setParentSiteRef(parentSiteRef);
-                        } else {
-                            logger.warn("Could not resolve parent {} for child {}. Keeping original reference.",
-                                    importedParentId, stopPlace.getId());
-                        }
-                    }
-
+                    StopPlaceType type = determineStopPlaceType(stopPlace);
+                    SiteRefStructure parentSiteRef;
+                    parentSiteRef = stopPlace.getParentSiteRef();
+                    stopPlace.setParentSiteRef(null);
                     StopPlace saved = stopPlaceVersionedSaverService.saveNewVersion(stopPlace);
-
-                    StopPlace updatedStopPlace = null;
-                    if (parentStopPlace != null) {
-                        updatedStopPlace = versionCreator.createCopy(parentStopPlace, StopPlace.class);
-                        updatedStopPlace.getChildren().add(saved);
-                        stopPlaceVersionedSaverService.saveNewVersion(parentStopPlace, updatedStopPlace);
+                    if (type == StopPlaceType.CHILD) {
+                        parentsByChild
+                                .computeIfAbsent(parentSiteRef.getRef(), k -> new HashSet<>())
+                                .add(saved.getNetexId());
                     }
-                    stopPlacesCreated.incrementAndGet();
-                    return netexMapper.mapToNetexModel(saved);
+                    if (type == StopPlaceType.PARENT) {
+                        // (fixme) temporary "hack" to test conceptual solution.
+                        originalIdByNetexId.put(saved.getNetexId(), stopPlace.getOriginalIds().stream().filter(i -> i.contains("SAM")).findFirst().get());
+                    }
+                    return saved;
                 })
-                .toList();
+                .peek(stopPlace -> stopPlacesCreated.incrementAndGet())
+                .map(stopPlace -> netexMapper.mapToNetexModel(stopPlace))
+                .collect(toList());
 
-        stops.addAll(children);
+        originalIdByNetexId.forEach((key, value) -> {
+            StopPlace parent = stopPlaceRepository.findFirstByNetexIdOrderByVersionDesc(key);
+            parent.setParentStopPlace(true);
+            List<StopPlace> children = parentsByChild.get(value).stream().map(id -> stopPlaceRepository.findFirstByNetexIdOrderByVersionDesc(id)).toList();
+            parent.getChildren().addAll(children);
+            stopPlaceVersionedSaverService.saveNewVersion(null, parent);
+        });
+
         return stops;
-    }
-
-    private StopPlaceGrouper groupByHierarchy(List<StopPlace> stops) {
-        Map<StopPlaceType, List<StopPlace>> grouped = stops.stream().collect(groupingBy(this::determineStopPlaceType));
-
-        return new StopPlaceGrouper(
-                grouped.getOrDefault(StopPlaceType.PARENT, List.of()),
-                grouped.getOrDefault(StopPlaceType.CHILD, List.of()),
-                grouped.getOrDefault(StopPlaceType.MONOMODAL, List.of())
-        );
     }
 
     private StopPlaceType determineStopPlaceType(StopPlace stopPlace) {
@@ -161,5 +127,4 @@ public class ParallelInitialStopPlaceImporter {
         logger.info("StopPlace {} could not be classified (quays={}, parentRef={})", stopPlace.getId(), hasQuays, hasParentRef);
         return StopPlaceType.UNKNOWN;
     }
-
 }
